# usd-parquet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.md  benchmark_spec.md  main.py  pyproject.toml
agent-notes/: BENCHMARK_RESULTS_INITIAL_LOAD.md  CHANGES_SUMMARY.md  COMPLETE_BENCHMARK_RESULTS.md  DOCUMENTATION_INDEX.md  HTML_REPORT_UPDATE.md  MEMORY_MEASUREMENTS_REAL.md  MEMORY_TAB_UPDATE.md  MEMORY_TRACKING_CHANGES.md  MEMORY_TRACKING_FIX.md  SESSION_SUMMARY.md  TABBED_REPORT_SUMMARY.md  TEST_DATA_GENERATION_IMPROVEMENTS.md
docs/: benchmark_results_summary.md  changes_multiprocessing.md  changes_single_property.md  changes_summary.md  memory_tracker.md  overhead_fix_summary.md  performance_tracker.md  progressive_loading_test.md  single_property_traversal_update.md  single_property_update_summary.md  zstd_update_summary.md
examples/: demo_overhead_correction.py  demo_performance_tracker_overhead.py  memory_tracker_usage.py  performance_tracker_usage.py  test_performance_tracker_overhead.py  test_probe_overhead.py
src/: parquetFileFormat.cpp  parquetFileFormat.h  parquetLayerData.cpp  parquetLayerData.h  plugInfo.json
tests/: create_test_parquet.py  generate_large_parquet.py  test_large_file.py  test_layer.usda  test_parquet_plugin.py  test_sublayers.py  view_parquet.py
tests/benchmarks/: conftest.py  generate_test_data.py  report.py  results.py  run_benchmarks.py  test_file_size.py  test_initial_load.py  test_multi_property.py  test_random_access.py  test_single_property.py
