[project]
name = "usd-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "pyarrow>=22.0.0",
    "pyopengl>=3.1.10",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]